@@ -7,6 +7,7 @@ Devel::Cover history
  - Compress and then delete old cpancover data
  - Clarify some docs around ignore (Olaf Alders) (github 207)
  - Run coverage on cpp and hpp files (Jacques Germishuys) (github 203)
+ - Add docs for coverage of modules on command line (Slaven Rezić) (github 204)
 
 Release 1.29 - 15 October 2017
  - Lock using read and append mode (Stephan Loyd) (github 196)
